2004-11-09  Quentin Mathe  <qmathe@club-internet.fr>
        
	WARNING: many things don't work
        * Headers/IKIconProvider.h:
	* Source/IKApplicationIconProvider.m:
	* Source/IKIconProvider.m:
        * Source/IKThumbnailProvider.m:
	Many corrections to make the framework partially works.

2004-08-24  Quentin Mathe <qmathe@club-internet.fr>

        WARNING: not tested.
        * Headers/IKApplicationIconProvider.h:
        * Headers/IKCompositor.h:
        * Headers/IKIconProvider.h:
        * Headers/IKThumbnailProvider.h:
        * Headers/NSFileManager+IconKit.h:
        * Source/IKApplicationIconProvider.m:
        * Source/IKIconProvider.m:
        * Source/NSFileManager+IconKit.m:
        * Source/GNUmakefile:
        Lot of corrections to make the framework compiles.

2004-08-17  Quentin Mathe <qmathe@club-internet.fr>
        
	WARNING: doesn't compile.
	* Headers/IKApplicationIconProvider.h: Reworded methods choice and
	methods names, doesn't use anymore a singleton pattern.
	* Source/IKApplicationIconProvider.m: Reworded methods choice and
	methods names, doesn't use anymore a singleton pattern. Added initial implementation.
	* Headers/IKIconProvider.h: Minor modifications.
	* Source/IKIconProvider.m: Initial implementation.
	* Headers/IKThumbnailProvider.h: Added.
	* Source/IKThumbnailProvider.m: Added with initial implementation, still
	work to do on the libpng based write method.
	* Headers/IKCompositor.h:
	* Source/IKCompositor.m:
	Changed the method name -composite to the method name -render and other
	minor modifications.
	* Headers/IKCompositorOperation.h: Renamed the enumeration
	IKCompositedIconPosition to IKCompositedImagePosition.
	* Headers/NSString+MD5Hash:h:
	* Source/NSString+MD5Hash.m: 
	Added (not written by us).
	* Headers/NSFilerManager+IconKit.h:
	* Source/NSFileManager+IconKit.m: 
	Added.
	* Source/GNUmakefile: Edited to include the newly added files.

2004-08-16  Nicolas Roard <nicolas@roard.com>
